source/blender/makesrna/intern/rna_image.c
@@ -194,7 +194,7 @@ static void rna_Image_colormanage_update(Main *bmain, Scene *UNUSED(scene), Poin
   Image *ima = (Image *)ptr->owner_id;
   BKE_image_signal(bmain, ima, NULL, IMA_SIGNAL_COLORMANAGE);
   DEG_id_tag_update(&ima->id, 0);
-  DEG_id_tag_update(&ima->id, ID_RECALC_EDITORS);
+  DEG_id_tag_update(&ima->id, ID_RECALC_EDITORS | ID_RECALC_SOURCE);
   WM_main_add_notifier(NC_IMAGE | ND_DISPLAY, &ima->id);
   WM_main_add_notifier(NC_IMAGE | NA_EDITED, &ima->id);
 }
